<resources>
    <string name="app_name">Janes Buns</string>
    <string name="account">Account</string>
    <string name="orders">Orders</string>
    <string name="login">Login</string>
    <string name="quantity">Qty</string>
    <string name="quantityAddBun">Quantity</string>
    <string name="price">kr</string>
    <string name="priceAddBun">Price</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Full Name</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="postalCode">Postal Code</string>
    <string name="city">City</string>
    <string name="registerUser">Register User</string>
    <string name="itemsInCart">Items in cart: </string>
    <string name="cart">Cart</string>
    <string name="janesBuns">Jane\'s Buns</string>
    <string name="logout">Logout</string>
    <string name="deliveryDate">Delivery Date</string>
    <string name="time">Time</string>
    <string name="total">Total</string>
    <string name="addBun">Add Cream Bun</string>
    <string name="invalidMail">You must provide a valid email</string>
    <string name="invalidPass">Password can\'t be empty</string>
    <string name="invalidPass2">Password must be over 6 characters</string>
    <string name="toastLogin">Successfully logged in as</string>
    <string name="toastLoginF">User has failed to login</string>
    <string name="toastRegister">User has registered</string>
    <string name="toastRegisterF">User has failed to register</string>
    <string name="nameError">Name can\'t be empty</string>
    <string name="phoneError">Phone can\'t be empty</string>
    <string name="phoneError2">Phone number isn\'t valid</string>
    <string name="mailError">Email can\'t be empty</string>
    <string name="mailError2">Email isn\'t valid</string>
    <string name="passwordError">Password must be over 6 characters</string>
    <string name="addressError">Address can\'t be empty</string>
    <string name="cityError">City can\'t be empty</string>
    <string name="postalCodeError">Postal code can\'t be empty</string>
    <string name="viewOrder">View active orders</string>
    <string name="back">Back</string>
    <string name="confirmed">Confirmed</string>
    <string name="recieved">Recieved</string>
    <string name="cancelled">Cancelled</string>
    <string name="sent">Sent</string>
    <string name="current_currency">Current currency</string>

</resources>